gap fixed in images of pages education and engagement

--- a/static/style.css
+++ b/static/style.css
@@ -365,10 +365,11 @@ padding-bottom: 2rem;
 }
 
 .page-text img.image {
-  width: 48%; /* Each image takes half of the square container */
+  width: 50%; /* Each image takes half of the square container */
   height: 100%; /* Make the images take the full height of the container */
   object-fit: cover; /* Crop the images to fit within the square container */
   margin: 0; /* Add spacing between images */
+  box-sizing: border-box;
 }
 
 @media (max-width: 767px) {
